# matic-home-assistant

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml  validate.yml
blueprints/automation/matic_robot/: clean_when_away.yaml  pet_aware.yaml  quiet_hours.yaml  room_rotation.yaml
custom_components/: __init__.py
custom_components/matic_robot/: __init__.py  binary_sensor.py  bluetooth_pairing.py  bluez_agent.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  firmware.py  frontend.py  icons.json  manifest.json  migrations.py  number.py  plans.py  room_plan_editor.js  room_plan_selector.py  select.py  sensor.py  services.py  services.yaml  session_tracking.py  strings.json  switch.py  update.py  vacuum.py
custom_components/matic_robot/client/: __init__.py  api.py  auth.py  commands.py  discovery.py  endpoints.py  exceptions.py  floor_plan.py  matic_intermediate_ca.pem  models.py  tls.py  (+1 more)
docs/: README.md  automation.md  firmware-compatibility.md  firmware-endpoint-map.md  hermes-pairing.md  privacy.md  recording-protocol.md  release-notes-0.2.0.md  release-notes-0.2.1.md  release-notes-0.2.2.md  release-notes-0.2.3.md
docs/firmware-versions/: template.md  v168.md
scripts/: check_fresh_install.py  check_public_tree.py  check_release_artifacts.py
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_paths.py  test_auth.py  test_bluetooth_pairing.py  test_bluez_agent.py  test_config_flow.py  test_config_flow_paths.py  test_coordinator.py  test_coverage_commands.py  test_diagnostics.py  test_discovery.py  test_endpoints.py  test_entities.py  test_firmware.py  test_floor_plan.py  test_hermes_commands.py  test_hermes_state.py  test_init.py  test_migrations.py  test_plans.py  test_public_tree.py  test_release_artifacts.py  test_release_metadata.py  test_release_packaging.py  test_room_plan_editor.py  test_room_plan_selector.py  test_services.py  test_session_tracking.py  test_telemetry.py  test_tls.py  test_vacuum_areas.py  test_wire.py  wire_builders.py
(+11 files in other folders)
